(fix) fix icons size

--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -6,6 +6,10 @@ header {
   position: fixed;
   width: 100%;
 
+  .icon {
+    height: 2rem;
+  }
+
   .btn {
     color: white;
     background: none;
