(feat) completed task

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,5 +1,7 @@
 @import "restore";
 @import "variables";
 @import "media-queries";
+@import "index";
 @import "header";
 @import "carousel";
+@import "footer";
