--- a/css/index.css
+++ b/css/index.css
@@ -116,7 +116,7 @@ body {
 }
 
 .main {
-  background-color: #fff;
+  background-color: #b31c8d;
   display: block;
   margin: -1px auto;
   width: 100%;
