--- a/scss/index.scss
+++ b/scss/index.scss
@@ -48,7 +48,7 @@ $search-link-margin-top: 5px;
 $dropdown-language-color: #616060;
 $enter-link-color: aliceblue;
 
-$main-background-color: #fff;
+$main-background-color: #d818a8;
 $main-box-shadow: -5px 0px 40px rgba(0, 0, 0, 0.5), 5px 0px 40px rgba(0, 0, 0, 0.5);
 $slider-margin-top: 50px;
 
