change bgc red for tvNow

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -194,7 +194,8 @@
 .tvNow {
     padding: 50px 0 0 10%;
     font-size: 20px;
-    background-color: #F7F8F9;
+    background-color:red
+;
     gap: 20px;
 }
 .header_tv {
