--- a/css/general.css
+++ b/css/general.css
@@ -128,7 +128,7 @@
   }
   .sale{
     background-color: rgb(247, 41, 41);
-    color: #fff;
+    color: #d0c6c6;
     width: 200px;
     height: 70px;
     display: flex;
