--- a/css/general.css
+++ b/css/general.css
@@ -106,7 +106,7 @@
 
 
   .main{
-    background-color: #f203d2;
+    background-color: #ee09d0;
     display: block;
     margin: -1px auto;
     width: 100%;
