--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -185,3 +185,45 @@ nav {
     }
     
 }
+.slider {
+            position: relative;
+            width: 100%;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+
+        &__cont {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        &__img {
+            flex: 0 0 100%;
+            min-width: 100%;
+            overflow: hidden;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        &-buttons {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .slider-button {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background-color: #333;
+            border-radius: 50%;
+             margin: 0 10px;
+            cursor: pointer;
+        }
+
+        .slider-button.active {
+            background-color: #bf573f55; /* Цвет активной кнопки */
+}
