--- a/style.css
+++ b/style.css
@@ -1,96 +1,137 @@
-*{
-    text-decoration: none;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+* {
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
+
 nav {
-    background-color: #181818;
-    overflow: hidden;
-    align-items: center;
-    color: whitesmoke;
-    padding: 15px 15px;
+  background-color: #181818;
+  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: whitesmoke;
+  padding: 15px 15px;
 }
-.cont{margin: 0px 50px;}
-.nav{
-    display: flex;
-    width: 100%;
+
+.cont {
+  margin: 0px 50px;
 }
-a{
-    color: whitesmoke;
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
 }
-.megogo{
-    font-size: 25px;
-  
+
+a {
+  color: whitesmoke;
 }
-.menu{
-    display: flex;
-    align-items: center;
-    margin: 0px 25px;
+
+.megogo {
+  font-size: 25px;
 }
-.menu a{
-    margin: 0px 15px;
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px 25px;
 }
-.btn{
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-    
+
+.menu a {
+  margin: 0px 15px;
 }
-.btn li{
-    margin: 0 25px;
+
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.border{
-    border: 0.5px solid whitesmoke;
-    padding: 10px 10px;
-    border-radius: 4px;
+
+.btn li {
+  margin: 0 25px;
 }
+
+.border {
+  border: 0.5px solid whitesmoke;
+  padding: 10px 10px;
+  border-radius: 4px;
+}
+
 .slider-cont {
-            position: relative;
-            width: 100%;
-            margin: 0 auto;
-            overflow: hidden;
-        }
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
 
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-        }
-.wedgets{
-    width: 100%;
-    background: rgb(200, 200, 200);
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 
+.wedgets {
+  width: 100%;
+  background: rgb(200, 200, 200);
 }
-.carts{
-    width: 100%;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+
+.carts {
+  width: 100%;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-.cart{
-    display: flex;
-    align-items: center;
+
+.cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.cart img{
-    padding: 0px 20px;
+
+.cart img {
+  padding: 0px 20px;
 }
-.carts-news{
-    display: flex;
+
+.carts-news {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
-.cart-news img{
-    width: 300px;
-    
+
+.cart-news img {
+  width: 300px;
 }
-.cart-news{
-    margin: 0 12px;
+
+.cart-news {
+  margin: 0 12px;
 }
-.cart-news h1{
-    font-size: 20px;
+
+.cart-news h1 {
+  font-size: 20px;
 }
-.seo{
-    margin-top: 40px;
+
+.seo {
+  margin-top: 40px;
 }
-.h1-text{
-    margin-bottom: 15px;
+
+.h1-text {
+  margin-bottom: 15px;
 }
